objects/Lot__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_Model__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Assigned Model</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The model should belong to the parent subdivision of the lot.</errorMessage>
            <filterItems>
                <field>Model__c.Subdivision__c</field>
                <operation>equals</operation>
                <valueField>$Source.Subdivision__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Model__c</referenceTo>
        <relationshipLabel>Lots</relationshipLabel>
        <relationshipName>Lots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Base_Model_Price_Override__c</fullName>
        <label>Base Model Price Override</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Info__c</fullName>
        <formula>TEXT(Type__c)+' / '+ Street_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Staging__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Staging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Newstar_ID__c</fullName>
        <externalId>true</externalId>
        <label>Newstar ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Newstar_Sync_Status__c</fullName>
        <label>Newstar Sync Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preconfigured_Options_Amount__c</fullName>
        <label>Preconfigured Options Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Premium__c</fullName>
        <label>Premium</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Released_for_Construction__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Released for Construction</description>
        <label>Released for Construction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Released_for_Sale__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Released for Sale</description>
        <label>Released for Sale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Sold</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <label>Street Address</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subdivision__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Subdivision</label>
        <referenceTo>Subdivision__c</referenceTo>
        <relationshipLabel>Lots</relationshipLabel>
        <relationshipName>Lots</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <formula>IF( (TEXT(Type__c) =='Spec' || TEXT(Type__c) =='Model'), Assigned_Model__r.Price__c + Price__c + Premium__c + Preconfigured_Options_Amount__c, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Regular</fullName>
                </value>
                <value>
                    <fullName>Spec</fullName>
                </value>
                <value>
                    <fullName>Model</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Lot</label>
    <nameField>
        <label>Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Released_for_Sale__c</columns>
        <columns>Subdivision__c</columns>
        <columns>Status__c</columns>
        <columns>Street_Address__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>